--- a/facebook-login.html
+++ b/facebook-login.html
@@ -8,7 +8,7 @@
     <!-- *first add the logo  -->
     <link
       rel="shortcut icon"
-      href="./images,vedio,audio/Facebook_icon.svg"
+      href="./images,vedio,audio/Facebook_icon.jpg"
       type="image/x-icon"
     />
 
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="./facebook-login.css" />
   </head>
   <body>
-    <img src="./images,vedio,audio/facebook image.svg" alt="please wait its loading " />
+    <!-- <img src="./images,vedio,audio/facebook image.jpg" alt="please wait its loading " /> -->
+    <h1>fɑcebook</h1>
     <main>
       <form action="">
         <h3>Log in to Facebook</h3>
